Fixed CarouselContainer pages overflow

--- a/ui/src/components/CarouselContainer.css
+++ b/ui/src/components/CarouselContainer.css
@@ -9,9 +9,8 @@
     scroll-snap-type: x mandatory;
     display: flex;
     flex-direction: row;
-    align-items: baseline;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .carousel-container::-webkit-scrollbar {
